# krypt-sim

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/data/: binance_vision.py
src/engine/: backtest.py  portfolio_backtest.py
src/runner/: analyze.py  grid_search.py  grid_search_cs.py  per_pair.py  walk_forward.py
src/strategies/: base.py  cs_momentum.py  donchian.py  multi_asset_base.py  squeeze.py  volume_anomaly.py  zscore_rev.py
tests/: end_to_end.py  family_comparison.py  sanity.py
