[project]
name = "krypt-sim"
version = "0.1.0"
description = "Historical simulation funnel for crypto trading strategies"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=14",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
